mdapipkg/unpackaged/objects/Stage_Code_History__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Library_Id__c</fullName>
        <label>Library Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <label>New</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Main__c</fullName>
        <label>Next Main Stage Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_description__c</fullName>
        <label>Next Main Stage Code description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old__c</fullName>
        <label>Old</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Plant_Trait__c</fullName>
        <label>Plant Trait</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progr__c</fullName>
        <label>Progr</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>changed_By__c</fullName>
        <label>changed By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence_Number__c</fullName>
        <label>sequence Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Stage Code History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stage Code History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Code Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>